--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Quicksand:wght@300..700&display=swap');
 
-*{
+* {
     font-family: 'Quicksand', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -9,7 +9,11 @@ body {
     color: white;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-family: 'Dosis', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Cantarell, 'Open Sans', sans-serif;
 }
 
@@ -17,11 +21,12 @@ h1, h2, h3, h4, h5 {
     display: flex;
     flex-direction: column;
     margin: 25vh auto;
+    margin-bottom: 0;
     width: 50vw;
     max-width: 768px;
-    height: 50vh;
+    height: 40vh;
     padding: 2rem 1rem;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 
     /* From https://css.glass */
@@ -30,4 +35,57 @@ h1, h2, h3, h4, h5 {
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(11px);
     -webkit-backdrop-filter: blur(11px);
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+
+#function-selector {
+    padding: 0;
+    margin: 1rem;
+    background-color: white;
+    border-radius: 20px;
+    display: inline-block;
+}
+
+.slide-selector {
+    all: unset;
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+    padding: 0.5rem;
+}
+
+.slide-selector.active {
+    color: #111115;
+    background-color: #a6e3a1;
+}
+
+.active:before,
+.active:after {
+    transition: all 0.3s ease;
 }
